--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -169,6 +169,12 @@
             android:summary="@string/double_tap_sleep_desc"
             android:defaultValue="false"/>
 
+        <ink.kaleidoscope.support.preferences.SystemSettingSwitchPreference
+            android:key="pocket_judge"
+            android:title="@string/pocket_judge_title"
+            android:summary="@string/pocket_judge_summary"
+            android:defaultValue="true" />
+
         <ink.kaleidoscope.support.preferences.SecureSettingSwitchPreference
             android:key="screen_off_udfps_enabled"
             android:title="@string/screen_off_fod_title"
