--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1596,4 +1596,18 @@
         <item>2</item>
         <item>4</item>
     </string-array>
+
+    <string-array name="active_sim_entries" translatable="false">
+        <item>@string/active_sim_both</item>
+        <item>@string/active_sim_one</item>
+        <item>@string/active_sim_two</item>
+        <item>@string/active_sim_none</item>
+    </string-array>
+
+    <string-array name="active_sim_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
 </resources>
